Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextBoolObj.quorum
Boolean b
b:SetValue(true)
text t = cast(text, b)
output t